--- a/webservice/requirements.txt
+++ b/webservice/requirements.txt
@@ -1,9 +1,13 @@
+dominate==2.1.16
 Flask==0.10.1
+Flask-Bootstrap==3.3.5.6
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.8
 Werkzeug==0.10.4
 wheel==0.24.0
+WTForms==2.0.2
