--- a/webservice/requirements.txt
+++ b/webservice/requirements.txt
@@ -7,6 +7,7 @@ Flask-WTF==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+pytz==2015.7
 SQLAlchemy==1.0.8
 Werkzeug==0.10.4
 wheel==0.24.0
